[package]
name = "permissioned-markets"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "permissioned_markets"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31"
anchor-spl =  "0.31"
serum_dex = { path = "../../../../" }
serum-dex-permissioned = { path = "../../../../permissioned" }
solana-program = "1.8.0"
